--- a/app/styles/settings/settings.color.scss
+++ b/app/styles/settings/settings.color.scss
@@ -6,5 +6,23 @@ $card-mentor: #e9e9e9;
 $card-box-shadow: rgba(51, 51, 51, 0.1);
 
 $white: #ffffff;
-$button-gradient: linear-gradient(to right, #ed7397 , #ec8773);
+$button-gradient: linear-gradient(to right, rgb(237, 114, 152), rgb(236, 136, 113));
 $button-element-level: #ff6666;
+$classroom-border: #cccccc;
+$nav-border: #f6f6f6;
+$rating-star: #fce298;
+$reset-progress: #fc4f4f;
+$course-progress-circle-front: linear-gradient(to right, rgba(237, 114, 152, 0.4), rgba(236, 136, 113, 0.4));
+$faded-text: #999999;
+
+
+$accordian-li: #fdfdfd;
+$status-back-complete: #d7f1d3;
+$status-front-complete: #82d073;
+$font-complete: #8dbf75;
+$status-back-incomplete: #bebebe;
+$default-accordian-font: #666666;
+$default-border: #cccccc;
+$font-sub-heading: #f6776f;
+$search-box-color: #f2f2f2;
+
