--- a/app/styles/_elements.scss
+++ b/app/styles/_elements.scss
@@ -5,22 +5,17 @@
 @import "elements/elements.level";
 @import "elements/elements.card.mentors";
 @import "elements/elements.card.price";
-@import "elements/elements.classroom";
+@import "elements/elements.para";
 @import "elements/elements.star";
 @import "elements/elements.status-circle";
 @import "elements/elements.accordian";
-@import "elements/elements.accordian-status";
-@import "elements/elements.accordian-head.status.scss";
-@import "elements/elements.accordian-li.duration.scss";
-@import "elements/elements.accordian-li.heading.scss";
-@import "elements/elements.accordian-li.type.scss";
 @import "elements/elements.tab-nav";
-@import "elements/elements.heading-u";
 @import "elements/elements.notify-type";
 @import "elements/elements.flexbox";
 @import "elements/elements.round-image";
-@import "elements/elements.heading-d";
 @import "elements/elements.auth-links";
 @import "elements/elements.video-player";
 @import "elements/elements.home.search";
+@import "elements/elements.faded-cont";
+@import "elements/elements.headings";
 
