--- a/app/styles/objects/o-homepage-layout/o-homepage.scss
+++ b/app/styles/objects/o-homepage-layout/o-homepage.scss
@@ -1,5 +1,11 @@
 .home-container {
+  margin-top: 65px;
   padding-left: 50px;
+  
+  .input-search{
+    display: none;
+    float: none;
+  }
 }
 
 .home-heading {
