--- a/app/styles/objects/o-overview-course/o-overview-course.scss
+++ b/app/styles/objects/o-overview-course/o-overview-course.scss
@@ -4,28 +4,30 @@
 
   .classroom-para{
     @include margin(0,0,40px,0);
-    width: 614px;
+    flex: 25%;
     text-align: justify;
     display: inline-block;
     font-size: $font-sm;
   }
 
-  .about-left{
-    @include margin(0, 24px, 0, 0);
+  .course-features{
+    padding-right: 55px;
     &>.flex-row{
-      @include margin(0, 0, 72px, 0);
+      @include margin(0, 0, 50px, 0);
     }
   }
 
   .img-desc{
     .round-img{
+      @include dimensions(72px, 72px);
       @include margin(0, 20px, 0, 0);
     }
 
     .classroom-para{
-      width: 200px;
+      width: 113px;
       text-align: left;
       @include margin(0,0,0,0);
+      font-size: $global-font-size;
     }
   }
 }
