update: carousel working condition

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,6 @@
 @import "generic/normalize";
 @import "generic/reset";
 
-@import "_elements.scss";
-@import "_objects.scss";
-@import "_media-query.scss";
+@import "_elements";
+@import "_objects";
+@import "_media-query";
