--- a/app/styles/generic/reset.scss
+++ b/app/styles/generic/reset.scss
@@ -4,8 +4,13 @@
 // Print styles.
 // Inlined to avoid the additional HTTP request: h5bp.com/r
 // ==========================================================================
+
+* {
+  outline: none;
+}
+
 body {
-  @include font($global-font-family, 27.6px, normal);
+  //@include font($global-font-family, 27.6px, normal);
   padding-top: 100px;
 }
 @media print {
