--- a/app/styles/objects/o-content/o-content.scss
+++ b/app/styles/objects/o-content/o-content.scss
@@ -1,10 +1,12 @@
 .o-content-section{
     background-color: $vp-background;
+    margin-top: 10px;
     height: calc(100vh - 107px);//set according to height of navbar;
 
-    .content-header{
+    .header{
         @include dimensions(100%, 100%);
         max-height: 101px;
+        border-bottom: solid 1px $vp-border;
     }
 
     .section-toggler{
@@ -100,3 +102,4 @@
     }
 
 }
+
