--- a/app/styles/settings/settings.color.scss
+++ b/app/styles/settings/settings.color.scss
@@ -23,6 +23,7 @@ $status-back-incomplete: #bebebe;
 $default-accordian-font: #666666;
 $default-border: #cccccc;
 $font-sub-heading: #f6776f;
+$navLink: #666666;
 
 $facebook: #3b5998;
 $google: #f4695a;
@@ -35,4 +36,5 @@ $vp-acc-head: #4c4c4c;
 $vp-border: #676767;
 $search-box-color: #f2f2f2;
 $faded-cont: #e4e4e4;
-
+$editor-background: #2e2e2e;
+$editor-line-number: #202020;
