--- a/app/styles/_objects.scss
+++ b/app/styles/_objects.scss
@@ -17,9 +17,13 @@
 @import "objects/o-announcement/o-announcement";
 @import "objects/o-overview-container/o-overview-container";
 @import "objects/o-about-course/o-buy-top";
+@import "objects/o-about-course/o-buy-right";
 @import "objects/o-homepage-layout/o-homepage";
 @import "objects/o-content/o-problem";
 @import "objects/o-content/o-pb-statement";
 @import "objects/o-courses/o-courses";
 @import "objects/o-content/o-code-editor";
 @import "objects/o-progress/o-progress";
+@import "objects/o-about-course/o-accordian";
+@import "objects/o-mycourse-layout/o-mycourse";
+@import "objects/o-about-course/o-about-course";
