--- a/app/styles/settings/settings.color.scss
+++ b/app/styles/settings/settings.color.scss
@@ -24,7 +24,7 @@ $default-accordian-font: #666666;
 $default-border: #cccccc;
 $font-sub-heading: #f6776f;
 $navLink: #666666;
-
+$transparent: transparent;
 $facebook: #3b5998;
 $google: #f4695a;
 $twitter: #03a9f4;
@@ -38,3 +38,6 @@ $search-box-color: #f2f2f2;
 $faded-cont: #e4e4e4;
 $editor-background: #2e2e2e;
 $editor-line-number: #202020;
+$input-code-editor: #2a2a2a;
+
+$modal-fader: #111111;
