--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,3 +12,10 @@
 @import "_elements";
 @import "_objects";
 @import "_media-query";
+
+.height-100 {
+  height: 100%
+}
+.open-select-box.show-block {
+  display: block
+}
