responsive footer and offerings-section on index

--- a/app/styles/_media-query.scss
+++ b/app/styles/_media-query.scss
@@ -2,4 +2,6 @@
 @import "media-query/media.content-section";
 @import "media-query/media.navigation";
 @import "media-query/media.card.layout";
-@import "media-query/media.course-progress";
+@import "media-query/media.course-progress/media.course-progress";
+@import "media-query/media.course-progress/media.overview-course";
+@import "media-query/media.course-progress/media.overview-recent";
