--- a/app/styles/_objects.scss
+++ b/app/styles/_objects.scss
@@ -22,6 +22,7 @@
 @import "objects/o-content/o-problem";
 @import "objects/o-content/o-pb-statement";
 @import "objects/o-content/o-pb-leaderboard";
+@import "objects/o-content/o-pb-submissions";
 @import "objects/o-courses/o-courses";
 @import "objects/o-content/o-code-editor";
 @import "objects/o-progress/o-progress";
@@ -31,3 +32,6 @@
 @import "objects/o-about-course/o-about-course";
 @import "objects/o-content/o-document.scss";
 @import "objects/o-footer/o-footer.scss";
+@import "objects/o-doubt/o-doubt.scss";
+@import "objects/o-otp-enroll/o-otp-enroll";
+@import "objects/o-offerings/o-offerings.scss";
