--- a/app/styles/settings/settings.color.scss
+++ b/app/styles/settings/settings.color.scss
@@ -14,7 +14,7 @@ $rating-star: #fce298;
 $reset-progress: #fc4f4f;
 $course-progress-circle-front: linear-gradient(to right, rgba(237, 114, 152, 0.4), rgba(236, 136, 113, 0.4));
 $faded-text: #999999;
-
+$intermediate-level: #FECC6E;
 $accordian-li: #fdfdfd;
 $status-back-complete: #d7f1d3;
 $status-front-complete: #82d073;
@@ -41,4 +41,6 @@ $editor-line-number: #202020;
 $input-code-editor: #2a2a2a;
 
 $modal-fader: #111111;
+$fail-red: #e8685d;
 $black: #000000;
+$otp-input-bg: #ebebeb;
