--- a/app/styles/objects/o-announcement/o-announcement.scss
+++ b/app/styles/objects/o-announcement/o-announcement.scss
@@ -1,6 +1,6 @@
 .o-announcement{
   background-color: $nav-border;
-  padding-top: 40px;
+  padding: 40px 0;
   
   .accordian-ul{
     @include margin(0,auto, 17px, auto);
@@ -8,22 +8,32 @@
   }
 
   .accordian-li{
-    @include padding-mixin(52px, 152px, 55px, 58px);
+    @include padding-mixin(4%, 5%, 4%, 4%);
     height: auto;
+    color: $global-font-text-color;
+    text-align: justify;
   }
 
   .accordian-head{
-    @include padding-mixin(0, 54px, 0, 43px);
-    height: 79px;
+    @include padding-mixin(1%, 5%, 1%, 3%);
+    min-height: 79px;
+
+    & .flex-row:first-child{
+      width: 90%;
+    }
+  }
+
+  .img-desc{
+    width: 93%;
   }
 
   .round-img{
-    @include margin(0, 24px, 0, 0);
     @include dimensions(50px, 50px);
+    margin-right: 3%;
   }
 
   .accordian-collapsar{
-    @include margin(0, 83px, 0, 0);
+    margin-right: 5%;
   }
 
   .heading-u{
@@ -33,11 +43,11 @@
   }
 
   .heading-d{
-    @include margin(0,0,0,0);
+    margin-bottom: 0;
+    width: 80%;
   }
 
   .main-h{
-    @include margin(0, 0, 13px, 0);
     color: $global-font-text-color;
     font-size: $font-sm;
     font-weight: $font-normal;
@@ -58,8 +68,8 @@
   .notify-icon{
 
     .notify-dot {
-      width: 5px;
-      height: 5px;
+      width: 8px;
+      height: 8px;
     }
     img {
       width: 41px;
@@ -67,15 +77,10 @@
   }
 
   .button-dashed{
-    @include dimensions(265px, 88px);
-    @include margin(80px, auto, 0, auto);
-    background: transparent;
-    font-size: $font-xl;
-    border-radius: 44px;
-  }
-
-  .display-none{
-      display:none;
+    @include dimensions(152px, 48px);
+    @include margin(60px, auto, 0, auto);
+    font-size: $global-font-size;
+    border-radius: 24px;
   }
 
 }
