--- a/app/styles/_media-query.scss
+++ b/app/styles/_media-query.scss
@@ -6,5 +6,7 @@
 @import "media-query/media.course-progress/media.course-progress";
 @import "media-query/media.course-progress/media.overview-course";
 @import "media-query/media.course-progress/media.overview-recent";
+@import "media-query/media.announcements";
 @import "media-query/media.about-instructor";
 @import "media-query/media.headings";
+@import "media-query/media.o-otp-enroll";
