--- a/app/styles/objects/o-homepage-layout/o-homepage.scss
+++ b/app/styles/objects/o-homepage-layout/o-homepage.scss
@@ -1,7 +1,7 @@
 .home-container {
   margin-top: 65px;
-  padding-left: 50px;
-  
+  padding: 0 50px;
+
   .input-search{
     display: none;
     float: none;
