fix advanced level css

--- a/app/styles/elements/elements.level.scss
+++ b/app/styles/elements/elements.level.scss
@@ -17,7 +17,7 @@
   top: 60px;
 }
 
-.intermediate-level {
+.advanced-level {
   @include border-radius(50%);
   @include dimensions(30px,30px);
   border: 6px solid $intermediate-level;
@@ -26,7 +26,7 @@
   left: 87%;
 }
 
-.intermediate-text {
+.advanced-text {
   font-size: 13px;
   left: 87%;
   margin-top: 2px;
