--- a/app/styles/media-query/media.home.scss
+++ b/app/styles/media-query/media.home.scss
@@ -34,3 +34,10 @@
 .testclass{
   width: 100px;
 }
+
+@media all and (max-width: 875px){
+  .logo-link{
+    display: inline-block;
+    min-width: 80%;
+  }
+}
