--- a/app/styles/objects/o-card-layout/card.scss
+++ b/app/styles/objects/o-card-layout/card.scss
@@ -44,3 +44,11 @@
 .o-text-card {
   margin-bottom: 11px;
 }
+
+.difficultyNameClas {
+    width: 20%;
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 0px;
+}
