display regster button in cards

--- a/app/styles/objects/carousel/carousel.scss
+++ b/app/styles/objects/carousel/carousel.scss
@@ -29,7 +29,7 @@
     height: 239px;
     transform: translateY(20%);
     left: 60px;
-    .button-solid {
+    a {
       display: none;
     }
     .card-heading {
@@ -47,7 +47,7 @@
     left: 95px;
     position: absolute;
     transform: translateY(72%);
-     .button-solid {
+     a {
        display: none;
      }
      .card-heading {
