--- a/app/styles/_elements.scss
+++ b/app/styles/_elements.scss
@@ -25,3 +25,5 @@
 @import "elements/elements.dropdown";
 @import "elements/elements.color";
 @import "elements/elements.bg-color";
+@import "elements/elements.divider";
+@import "elements/elements.form-input";
