--- a/app/styles/objects/o-sidebar/o-sidebar.scss
+++ b/app/styles/objects/o-sidebar/o-sidebar.scss
@@ -22,15 +22,20 @@
         top: -30px;
       }
   }
-  
+
+
+
   .sidebar {
+    display: block;
     position: fixed;
     @include dimensions(55vw, 100%);
     top: 0;
     left: 0;
-    z-index: 102;
+    z-index: 200;
     background-color: #ffffff;
     @include padding-mixin(7%, 5%, 7%, 5%);
+    transition: 0.5s;
+    overflow-x: hidden;
 
     .close {
       font-size: 24px;
@@ -73,6 +78,10 @@
         bottom: 4%;
       }
     }
+  }
+
+  .sidebar-none {
+    margin-left: -55vw;
   }
 }
 
