--- a/app/styles/objects/o-card-layout/card.scss
+++ b/app/styles/objects/o-card-layout/card.scss
@@ -7,42 +7,16 @@
 
   .button-solid {
     position: absolute;
-    position: absolute;
-    right: 0;
+    top: 5px;
+    left: 39%;
   }
 
   .button-parent {
     position: relative;
-    height: 50px;
   }
 
   .price-detail {
     margin-top: 25px;
-  }
-
-  .pos-rating, .neg-rating, .edit-rating{
-    font-size: $global-font-size;
-  }
-
-  .rating{
-    margin: 6% 0;
-  }
-
-  .edit-rating{
-    border: none;
-  }
-
-  .header{
-    margin-bottom: 30px;
-  }
-
-  .footer{
-    text-align: center;
-    font-size: $card-md;
-  }
-
-  .row{
-    padding: 0;
   }
 }
 
@@ -50,7 +24,7 @@
   margin: 0;
   padding:32px;
   .o-image-card {
-    margin-bottom: 15px;
+    margin-bottom: 27px;
     padding-top: 40px;
   }
   .o-layout-card {
@@ -65,10 +39,4 @@
 
 .o-text-card {
   margin-bottom: 11px;
-}
-
-.difficulty-div {
-  position: absolute;
-  right: 6%;
-  top: 30px;
 }
