--- a/app/styles/elements/elements.card.price.scss
+++ b/app/styles/elements/elements.card.price.scss
@@ -4,13 +4,13 @@
 }
 
 .card-batches {
-  font-size: $global-font-size;
+  font-size: 17.1px;
   margin-bottom: 5px;
 }
 
 .card-batch-details {
   display: inline-block;
-  font-size: $global-font-size;
+  font-size: 19.1px;
   span {
     color: red;
   }
