--- a/app/styles/media-query/media.card.layout.scss
+++ b/app/styles/media-query/media.card.layout.scss
@@ -6,45 +6,10 @@
 
 }
 
-@media screen and (min-width: 576px) and (max-width: 767px) {
-  .o-layout-card{
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-    .footer{
-      text-align: left;
-      font-size: $global-font-size;
-    }
-
-    .card-mentors:nth-child(2) {
-      z-index: 99;
-      margin-left: 20px;
-    }
-
-    .rating{
-      margin: 0;
-    }
-
-    .card-mentor-divider{
-      margin-top: 0;
-    }
-  }
+@media screen and (min-width: 632px) and (max-width: 832px) {
 
   .grid {
     margin: 0;
-
-    .o-image-card {
-      padding-top: 0;
-      padding-right: 15px;
-      margin: 0;
-      float: left;
-      width: 14%;
-      min-width: 75px;
-    }
-
-    .row {
-      padding:0;
-    }
   }
 
   .card-layout {
@@ -52,13 +17,17 @@
     max-width: 100%;
   }
 
+  .card-image {
+    float: left;
+    margin-right: 15px;
+  }
+
   .card-heading {
     float: left;
     display: contents;
     overflow: hidden;
-    max-width: 70%;
-    margin-bottom: 0;
-    margin-top: 10px;
+    max-width: 40%;
+    font-size: 1rem;
   }
 
   .card-text {
@@ -70,13 +39,13 @@
 
   .card-mentor {
     display: flex;
-    flex: 0 0 66.6666666667%;
-    max-width: 66.6666666667%;
   }
 
   .card-mentor-image {
     padding-bottom: 16.5%;
     width: 16.5%;
+    height: 0;
+    margin-left: -50px;
   }
 
   .card-mentors {
@@ -84,69 +53,81 @@
     position: absolute !important;
     width: 50% !important;
   }
-  
-  .card-price-details{
-    float: right;
+
+  .card {
+    height: 45vw;
+    padding-top: 40px;
+  }
+
+  .card-image {
+    width: 10%;
+  }
+
+  .card-text {
+    display: block;
+  }
+  .grid {
+    .o-image-card {
+      padding-top: 0;
+    }
+    .row {
+      padding:0;
+    }
+  }
+
+  .o-layout-card {
+    .button-solid {
+      left: 50%;
+      top: -5px;
+    }
   }
 
   .button-dashed {
     margin: 20px auto;
   }
-  
-  .card-price-details{
-    text-align:  right;
-  }
-
-  .card, .card-text, .card-heading{
-    height: auto;
-  }
 }
 
 
-@media screen and (max-width: 575px) {
-  .card-layout{
+@media screen and (max-width: 632px) {
+  .button-dashed {
+    margin: 20px auto;
+  }
+
+  .card-layout {
     flex: 0 0 100% ;
     max-width: 100% ;
+  }
 
-    .o-image-card{
-      width: 25%;
-    }
+  .card-mentor-text {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    top: 1px;
+  }
 
-    .button-dashed {
-      margin: 20px auto;
-    }
+  .card-mentor-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -10px;
+  }
 
-    .card-mentor-text {
-      text-align: center;
-      display: block;
-      margin: 0 auto;
-      padding-left: 0;
-    }
 
-    .card-mentor-image {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 10px;
-    }
+  .card-price-details {
+    text-align: center;
+    width: 100%;
+  }
 
-    .rating{
-      margin-top: 0;
-      margin-bottom: 25px;
-    }
+}
 
-    .card{
-      height: auto;
-      padding-bottom: 20px;
-    }
 
-    .card-text, .card-heading{
-      height: auto;
-    }
-
-    .card-price-details {
-      text-align: left;
-      width: 100%;
+@media screen and (max-width: 578px) {
+  .o-layout-card {
+    .button-solid {
+      position: relative;
+      margin: 4% auto;
+      left: 0;
     }
   }
+
 }
