--- a/app/styles/_elements.scss
+++ b/app/styles/_elements.scss
@@ -28,3 +28,5 @@
 @import "elements/elements.divider";
 @import "elements/elements.form-input";
 @import "elements/elements.pagination";
+@import "elements/element.arrangement";
+@import "elements/element.border-card";
