--- a/app/styles/_media-query.scss
+++ b/app/styles/_media-query.scss
@@ -13,6 +13,14 @@
 @import "media-query/media.o-otp-enroll";
 @import "media-query/media.o-pb";
 @import "media-query/media.item-card";
+@import "media-query/media.o-profile.card";
+@import "media-query/media.o-profile.card.edit";
 @import "media-query/media.checkout-card";
 @import "media-query/media.address-card";
 @import "media-query/media.form-input";
+@import "media-query/media.tab-nav";
+@import "media-query/media.auth-links";
+@import "media-query/media.login";
+@import "media-query/media.form-input";
+@import "media-query/media.side-nav";
+@import "media-query/media.o-app-page";
