--- a/app/styles/_objects.scss
+++ b/app/styles/_objects.scss
@@ -8,6 +8,7 @@
 @import "objects/o-accordian-layout/o-accordian-layout";
 @import "objects/o-announcement/o-announcement";
 @import "objects/o-profile-page/o-profile-page";
+@import "objects/o-profile-page-edit/o-profile-page-edit";
 @import "objects/o-edit-profile/o-edit-profile";
 @import "objects/o-content/o-content";
 @import "objects/o-content/o-timeline";
@@ -40,4 +41,7 @@
 @import "objects/o-checkout-card/o-checkout-card";
 @import "objects/o-address-card/o-address-card";
 @import "objects/form-input/form-input";
+@import "objects/o-login/o-login";
 @import "objects/o-course-card/o-course-card";
+@import "objects/o-side-nav/o-side-nav";
+@import "objects/o-app-page/o-app-page";
