fixed active issue: navbar

--- a/app/styles/_media-query.scss
+++ b/app/styles/_media-query.scss
@@ -24,3 +24,8 @@
 @import "media-query/media.form-input";
 @import "media-query/media.side-nav";
 @import "media-query/media.o-app-page";
+@import "media-query/media.o-add-address";
+@import "media-query/media.o-address-page";
+@import "media-query/media.o-client-page";
+@import "media-query/media.o-client-add";
+@import "media-query/media.signup";
