--- a/app/styles/_objects.scss
+++ b/app/styles/_objects.scss
@@ -45,3 +45,9 @@
 @import "objects/o-course-card/o-course-card";
 @import "objects/o-side-nav/o-side-nav";
 @import "objects/o-app-page/o-app-page";
+@import "objects/o-add-address/o-add-address";
+@import "objects/o-address-page/o-address-page";
+@import "objects/o-client-add/o-client-add";
+@import "objects/o-client-page/o-client-page";
+@import "objects/o-signup/o-signup";
+@import "objects/tab-nav/tab-nav";
