--- a/app/styles/media-query/media.o-client-add.scss
+++ b/app/styles/media-query/media.o-client-add.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 1200px) {
-  .o-profile-edit {
+  .o-client-add {
     .card {
       @include padding-mixin(40px, 40px, 40px, 40px);
       font-size: $font-xs;
@@ -14,37 +14,35 @@
     }
 
     .attributes {
-      .flex-row {
-        @include padding-mixin(20px, 0, 0, 0);
-      }
-
       .detail-row {
         @include margin(20px, 0, 20px, 0);
         width: 100%;
       }
     }
+
+    .button-row {
+      margin-top: 20px;
+    }
+
   }
 }
 
-@media screen and (min-width: 576px) and (max-width: 767px) {
-  .o-profile-edit {
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .o-client-add {
     .card {
-      @include padding-mixin(55px, 10px, 25px, 30px);
-      font-size: $global-font-size;
+      @include padding-mixin(55px, 30px, 25px, 30px);
     }
 
     .flex-row {
-      @include padding-mixin(0, 0, 20px, 0);
+      @include padding-mixin(0, 0, 0, 0);
       font-weight: $font-medium;
     }
 
     .heading-u-red {
-      @include padding-mixin(0, 180px, 10px, 0);
-      font-size: $font-mds;
+      @include padding-mixin(0, 140px, 10px, 0);
     }
 
     .input-text{
-      @include margin(0, 20px, 0, 0);
       height: 50px;
     }
 
@@ -55,41 +53,35 @@
 }
 
 @media screen and (max-width: 575px) {
-  .o-profile-edit {
+  .o-client-add {
     .card {
       @include padding-mixin(25px, 20px, 25px, 20px);
       font-size: $card-sm;
       font-weight: $font-medium;
     }
 
-    .button-solid {
-      font-size: $card-sm;
-    }
-
     .heading-u-red {
-      @include padding-mixin(0, 150px, 13px, 0);
+      @include padding-mixin(0, 103px, 13px, 0);
       font-size: $font-xs;
     }
 
     .button-solid {
-      height: 35px;
       font-size: $card-sm;
     }
 
     .attributes {
       .input-text {
-        height: 40px;
+        height: 50px;
         font-size: $card-sm;
         width: 70%;
       }
 
       .label-input {
-        width: 20%;
+        width: 30%;
       }
 
       .detail-row {
         @include margin(10px, 0, 10px, 0);
-        width: 100%;
       }
     }
   }
