--- a/app/styles/objects/o-address-page/o-address-page.scss
+++ b/app/styles/objects/o-address-page/o-address-page.scss
@@ -1,11 +1,10 @@
-.o-app-page {
+.o-address-page {
   font-size: $font-xs;
 
   .card {
     @include dimensions(100%, auto);
     @include margin(0, 0, 30px, 0);
-    @include padding-mixin(40px, 60px, 40px, 60px);
-    border: none;
+    @include padding-mixin(70px, 60px, 40px, 60px);
   }
 
   .border-card {
@@ -14,19 +13,19 @@
     position: relative;
   }
 
-  .app-row {
+  .address-row {
     @include padding-mixin(10px, 0, 10px, 0);
     overflow: hidden;
   }
 
   .heading-u-red {
-    @include padding-mixin(0, 380px, 33px, 0);
-    @include margin(0, 0, 30px, 0);
+    @include padding-mixin(0, 200px, 33px, 0);
+    @include margin(0, 0, 0, 0);
     font-size: $font-mds;
   }
 
   .heading {
-    font-size: $font-sm;
+    font-size: $font-xs;
   }
 
   .row {
@@ -37,6 +36,10 @@
     @include margin(0, 0, 10px, 0);
     height: auto;
     font-weight: $font-normal;
+
+    .flex-row {
+      @include padding-mixin(20px, 0, 20px, 0);
+    }
   }
 
   .button-row {
@@ -58,4 +61,18 @@
     font-size: $font-xs;
     font-weight: $font-medium;
   }
+
+  .button-solid {
+    width: 30%;
+    max-width: 180px;
+    font-size: $font-xs;
+    font-weight: $font-medium;
+  }
+
+  .flex-row {
+    @include margin(0, 0, 30px, 0);
+    width: 100%;
+    font-weight: $font-medium;
+  }
+
 }
