--- a/app/styles/objects/o-client-add/o-client-add.scss
+++ b/app/styles/objects/o-client-add/o-client-add.scss
@@ -1,4 +1,5 @@
-.o-profile-edit {
+.o-client-add {
+  justify-content: space-evenly;
   font-size: $font-sm;
 
   .card {
@@ -6,15 +7,11 @@
     @include margin(0, 0, 30px, 0);
     @include padding-mixin(40px, 60px, 40px, 45px);
   }
-
+  
   .input-text {
     @include padding-mixin(0, 20px, 0, 20px);
     height: 60px;
     color: $navLink;
-  }
-
-  .dropdown-ul {
-    box-shadow: unset;
   }
 
   .input-text[disabled]{
@@ -35,7 +32,6 @@
     @include margin(0, 0, 10px, 0);
     height: auto;
     font-weight: $font-normal;
-
     .detail-row {
       @include margin(20px, 0, 20px, 0);
       width: 48%;
@@ -49,7 +45,4 @@
     font-weight: $font-medium;
   }
 
-  .reset-button {
-    @include margin(0, 30px, 0, 0);
-  }
 }
