--- a/app/styles/objects/o-client-page/o-client-page.scss
+++ b/app/styles/objects/o-client-page/o-client-page.scss
@@ -1,11 +1,11 @@
-.o-app-page {
+.o-client-page {
+  justify-content: space-evenly;
   font-size: $font-xs;
 
   .card {
     @include dimensions(100%, auto);
     @include margin(0, 0, 30px, 0);
-    @include padding-mixin(40px, 60px, 40px, 60px);
-    border: none;
+    @include padding-mixin(70px, 60px, 40px, 60px);
   }
 
   .border-card {
@@ -14,14 +14,14 @@
     position: relative;
   }
 
-  .app-row {
+  .client-row {
     @include padding-mixin(10px, 0, 10px, 0);
     overflow: hidden;
   }
 
   .heading-u-red {
-    @include padding-mixin(0, 380px, 33px, 0);
-    @include margin(0, 0, 30px, 0);
+    @include padding-mixin(0, 300px, 33px, 0);
+    @include margin(0, 0, 0, 0);
     font-size: $font-mds;
   }
 
@@ -50,6 +50,13 @@
     @include margin(0, 0, 20px, 0);
   }
 
+  .button-solid {
+    width: 30%;
+    max-width: 180px;
+    font-size: $font-xs;
+    font-weight: $font-medium;
+  }
+
   .button-dashed {
     @include margin(0, 0, 0, 0);
     max-width: 136px;
@@ -58,4 +65,11 @@
     font-size: $font-xs;
     font-weight: $font-medium;
   }
+
+  .flex-row {
+    @include margin(0, 0, 30px, 0);
+    width: 100%;
+    font-weight: $font-medium;
+  }
+
 }
