--- a/app/styles/objects/o-content/o-code-editor.scss
+++ b/app/styles/objects/o-content/o-code-editor.scss
@@ -33,7 +33,8 @@
     align-items: center;
 
      span {
-       float:right;
+       padding-left: 120px;
+       position:fixed;
      }
   }
 
@@ -55,7 +56,7 @@
     }
 
     .show-block {
-      display: block
+      display: block;
     }
   }
 
