--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,3 +4,5 @@
     margin-left: 40px;
   }
 }
+@import "ember-modal-dialog/ember-modal-structure";
+@import "ember-modal-dialog/ember-modal-appearance";
