scaled down online.codingblocks.com

--- a/app/styles/objects/o-homepage-layout/o-homepage.scss
+++ b/app/styles/objects/o-homepage-layout/o-homepage.scss
@@ -1,5 +1,5 @@
 .home-container {
-  margin-top: 65px;
+  margin-top: 50px;
   padding-left: 50px;
   
   .input-search{
@@ -38,6 +38,10 @@
 .custom-heading{
   .heading-u{
     margin-bottom: 5px;
+  }
+
+  .button-dashed{
+    float: right;
   }
 }
 
