--- a/app/styles/elements/elements.card.text.scss
+++ b/app/styles/elements/elements.card.text.scss
@@ -29,3 +29,106 @@
   background-color: #f6f6f6;
   padding: 5%;
 }
+
+
+/*
+=============================
+Variables
+=============================
+*/
+  $card-padding: 24px;
+  $card-height: 350px;
+  $card-skeleton: linear-gradient(lightgrey $card-height, transparent 0);
+  
+  $avatar-size: 50px;
+  $avatar-position: $card-padding $card-padding;
+  $avatar-skeleton: radial-gradient(circle 25px at center, white 99%, transparent 0);
+  
+  $title-height: 40px;
+  $title-width: 270px;
+  $title-position: $card-padding 100px;
+  $title-skeleton: linear-gradient(white $title-height, transparent 0);
+  
+  $desc-line-height: 20px;
+  $desc-line-skeleton: linear-gradient(white $desc-line-height, transparent 0);
+  $desc-line-1-width:270px;
+  $desc-line-1-position: $card-padding 222px;
+  $desc-line-2-width:240px;
+  $desc-line-2-position: $card-padding 248px;
+  
+  $footer-height: 40px;
+  $footer-position: 0 calc(#{$card-height} - #{$footer-height});
+  $footer-skeleton: linear-gradient(white $footer-height, transparent 0);
+  
+  $blur-width: 200px;
+  $blur-size: $blur-width calc(#{$card-height} - #{$footer-height});
+
+
+/*
+=============================
+Card Skeleton for Loading
+=============================
+*/
+
+@keyframes loading {
+  to {
+    background-position:
+      350% 0,        
+      $title-position,  
+      $desc-line-1-position,
+      $desc-line-2-position,
+      $avatar-position,
+      $footer-position,
+      0 0;
+  }
+}
+
+.skeletons {
+  margin-bottom: 1em;
+  height: $card-height;
+  
+  &:empty::after {
+    content:"";
+    display:block;
+    width: 100%;
+    height: 100%;
+    border-radius:6px;
+    box-shadow: 0 10px 45px rgba(0,0,0, .1);
+
+    background-image:
+      linear-gradient(
+        90deg, 
+        rgba(lightgrey, 0) 0, 
+        rgba(lightgrey, .8) 50%, 
+        rgba(lightgrey, 0) 100%
+      ),
+      $title-skeleton,
+      $desc-line-skeleton,
+      $desc-line-skeleton,
+      $avatar-skeleton,
+      $footer-skeleton,
+      $card-skeleton;
+
+    background-size:
+      $blur-size,
+      $title-width $title-height,
+      $desc-line-1-width $desc-line-height,
+      $desc-line-2-width $desc-line-height,
+      $avatar-size $avatar-size,
+      100% $footer-height,
+      100% 100%;
+    
+    background-position:
+      -150% 0,
+      $title-position,
+      $desc-line-1-position,
+      $desc-line-2-position,
+      $avatar-position,
+      $footer-position,
+      0 0;
+
+    background-repeat: no-repeat;
+    animation: loading 1.5s infinite;
+  }
+}
+
