--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,5 +4,39 @@
     margin-left: 40px;
   }
 }
+
+body.centered-modal-showing {
+  overflow: hidden;
+}
+.center-scroll {
+  position: relative;
+  background-color: white;
+  min-width: 30em;
+  max-width: 650px;
+  min-height: 20em;
+  margin-top: 100px;
+  margin-bottom: 30px;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 25px 4px rgba(0,0,0,0.30);
+}
+.center-scroll-wrapper {
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  overflow-y: scroll;
+  z-index: 200;
+}
+ .center-scroll-overlay {
+  align-items: flex-start;
+  justify-content: center;
+  position: relative;
+  height: auto;
+  min-height: 100vh;
+  display: flex;
+  padding: 1em;
+}
+
 @import "ember-modal-dialog/ember-modal-structure";
 @import "ember-modal-dialog/ember-modal-appearance";
