motley small fixes integration

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,7 +31,7 @@ body.centered-modal-showing {
 .centered-scrolling-container {
   position: relative;
   background-color: white;
-  min-width: 30em;
+  width: 100%;
   max-width: 650px;
   min-height: 20em;
   margin-top: 100px;
