dont use ember modal classes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,11 +54,11 @@ body.centered-modal-showing {
   overflow: auto;
 }
 
-.ember-modal-overlay {
+.cart-modal-overlay {
   z-index: 500;
 }
 
-.ember-modal-overlay .round-img {
+.cart-modal-overlay .round-img {
   width: 100%;
   height: 100%;
 }
