mini cart component popup (#337)
* mini cart component done

* adding end lines

* dialog layout done

* vertical align content

* LGTM fix

* remove useless code

* dont use ember modal classes

* dont need actions as well

* add redirect

* back merge with ember 3.8

* fix task-button

* don't interrupt user if the product in cart is same as product he wants to buy

* close the dialog when addToCartTask is Complete

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,6 +54,15 @@ body.centered-modal-showing {
   overflow: auto;
 }
 
+.cart-modal-overlay {
+  z-index: 500;
+}
+
+.cart-modal-overlay .round-img {
+  width: 100%;
+  height: 100%;
+}
+
 .display-block{
   display: block !important;
 }
