--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -70,3 +70,9 @@ body.centered-modal-showing {
 footer {
   overflow: hidden;
 }
+
+.monaco-editor, .monaco-editor * {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
