--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,16 +1,11 @@
-/* Permanent fix */
-
-@import "ember-modal-dialog/ember-modal-structure";
-@import "ember-modal-dialog/ember-modal-appearance";
-
-@import "./components/index.scss";
-
+/* temporary fix */
 .main-nav {
   .round-img {
     margin-left: 40px;
   }
 }
-
+@import "ember-modal-dialog/ember-modal-structure";
+@import "ember-modal-dialog/ember-modal-appearance";
 body.centered-modal-showing {
   overflow: hidden;
 }
@@ -68,18 +63,12 @@ body.centered-modal-showing {
   height: 100%;
 }
 
-.display-block {
+.display-block{
   display: block !important;
 }
 
 footer {
   overflow: hidden;
-}
-
-.monaco-editor, .monaco-editor * {
-  width: 100%;
-  height: 100%;
-  border: none;
 }
 
 picture * {
