--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,11 +1,16 @@
-/* temporary fix */
+/* Permanent fix */
+
+@import "ember-modal-dialog/ember-modal-structure";
+@import "ember-modal-dialog/ember-modal-appearance";
+
+@import "./components/index.scss";
+
 .main-nav {
   .round-img {
     margin-left: 40px;
   }
 }
-@import "ember-modal-dialog/ember-modal-structure";
-@import "ember-modal-dialog/ember-modal-appearance";
+
 body.centered-modal-showing {
   overflow: hidden;
 }
@@ -63,8 +68,18 @@ body.centered-modal-showing {
   height: 100%;
 }
 
-.display-block{
+.display-block {
   display: block !important;
+}
+
+footer {
+  overflow: hidden;
+}
+
+.monaco-editor, .monaco-editor * {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 picture * {
