fix: ide output pre tag overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -85,3 +85,11 @@ picture * {
 .home-banner .left .button-solid{
   background-image: none;
 }
+
+pre{
+  white-space: pre-wrap;      
+ white-space: -moz-pre-wrap;  
+ white-space: -pre-wrap;      
+ white-space: -o-pre-wrap;  
+ word-wrap: break-word;       
+}
