--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,10 +86,14 @@ picture * {
   background-image: none;
 }
 
-pre{
-  white-space: pre-wrap;      
- white-space: -moz-pre-wrap;  
- white-space: -pre-wrap;      
- white-space: -o-pre-wrap;  
- word-wrap: break-word;       
+.content-container{
+  .result{
+    pre{
+      white-space: pre-wrap;      
+     white-space: -moz-pre-wrap;  
+     white-space: -pre-wrap;      
+     white-space: -o-pre-wrap;  
+     word-wrap: break-word;       
+    }
+  }
 }
