New Doubt system + chat (#394)
* add: doubts-feedback componenet

* add: talkjs service

* add ui for doubt feedbacks

* add inbox link

* build staging on travis

* fix staging server

* Keep section_id in params vs query-params (#380)

* add section id in url params

* pre load contents

* support for old urls

* no debugger statement

* small bugfix: can't change code-challenge tab

* add doubt-feedback ui

* add prod talkjs env var

* use motley @0.3.42

* fix yellow-tick for doubt-feedback ui

* ensure loggedIn for /inbox

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,9 +86,9 @@ picture * {
   background-image: none;
 }
 
-.content-container{
-  .result{
-    pre{
+.content-container {
+  .result {
+    pre {
       white-space: pre-wrap;      
      white-space: -moz-pre-wrap;  
      white-space: -pre-wrap;      
@@ -96,4 +96,8 @@ picture * {
      word-wrap: break-word;       
     }
   }
+}
+
+.inbox {
+  height: 600px;
 }
