--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,10 +86,15 @@ picture * {
   background-image: none;
 }
 
+#embedBox {
+  width: 100%;
+  height: 100%;
+}
+
 .content-container {
   .result {
     pre {
-      white-space: pre-wrap;      
+     white-space: pre-wrap;      
      white-space: -moz-pre-wrap;  
      white-space: -pre-wrap;      
      white-space: -o-pre-wrap;  
