--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -61,6 +61,7 @@ body.centered-modal-showing {
 
 .cart-modal-overlay {
   z-index: 500;
+  padding-top: 70px;
 }
 
 .cart-modal-overlay .round-img {
