flago ki fixing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -113,5 +113,7 @@ picture * {
   background-size: cover;
   height: 100px;
   width: 100px;
-  
+  border-radius: 50px;
+  border: solid 2px #e8e8e8;
+
 }
