gradient naya wala

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -117,3 +117,7 @@ picture * {
   border: solid 2px #e8e8e8;
 
 }
+
+.bg-red-lr{
+  background-image: linear-gradient(to right, #e9414d, #2d2982);
+}
