add css for highlight row on csv_leaderbaord

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -121,3 +121,13 @@ picture * {
 .c-csv .bottom{
   position: sticky;
 }
+
+
+tr.highlight {
+  background-color: antiquewhite;
+}
+
+tr.highlight td {
+  height: 80px;
+  padding: 0 !important;
+}
