Add meta name=description

--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -13,6 +13,7 @@
 {{/if}}
 
 {{#if model.description}}
+  <meta name="description" content={{model.description}}>
   <meta type="description" content={{model.description}}>
   <meta name="twitter:card" content={{model.description}}>
   <meta property="og:description" content={{model.description}}>
