add course library cta

--- a/app/styles/lists.scss
+++ b/app/styles/lists.scss
@@ -9,3 +9,7 @@
 .spaced-list > *:not(:last-child) {
   padding-bottom: 2rem;
 }
+
+.spaced-list-margin  > *:not(:last-child) {
+  margin-bottom: 2rem;
+}
