--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -125,6 +125,14 @@ tr.highlight td {
   border: none;
 }
 
+.bg-grey-darker {
+  background-color: #292c33;
+}
+
+.bg-black-lighter {
+  background-color: #1b1e26;
+}
+
 .c-code-card {
   .header {
     background-color: #23252c;
