[FIX] Conditionally disable pagination component

--- a/lib/ember-w-pack/addon/templates/components/w-pagination.hbs
+++ b/lib/ember-w-pack/addon/templates/components/w-pagination.hbs
@@ -1,3 +1,4 @@
+{{#if disableComponent}} 
 <div class="t-align-c mt-3 bold">
   <button disabled="{{if disabledPrevious 'disabled'}}" {{action 'previousPage'}}>
     &lt; Prev
@@ -11,3 +12,4 @@
   </button>
   
 </div>
+{{/if}}
