--- a/app/styles/components/spin.scss
+++ b/app/styles/components/spin.scss
@@ -167,3 +167,46 @@
   padding: 0;
   max-width: 800px;
 }
+
+
+@keyframes wobble {
+  0% {
+    -webkit-transform: none;
+    transform: none;
+  }
+
+  15% {
+    -webkit-transform: translate3d(-25%, 0, 0) ;
+    transform: translate3d(-15%, 0, 0) ;
+  }
+
+  30% {
+    -webkit-transform: translate3d(20%, 0, 0) ;
+    transform: translate3d(10%, 0, 0) ;
+  }
+
+  45% {
+    -webkit-transform: translate3d(-15%, 0, 0) ;
+    transform: translate3d(-7%, 0, 0) ;
+  }
+
+  60% {
+    -webkit-transform: translate3d(10%, 0, 0) ;
+    transform: translate3d(7%, 0, 0) ;
+  }
+
+  75% {
+    -webkit-transform: translate3d(-5%, 0, 0) ;
+    transform: translate3d(-3%, 0, 0) ;
+  }
+
+  100% {
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.wobble {
+  animation: wobble 0.6s 1 linear;
+
+}
