[REFACTOR] changed variable name

--- a/lib/ember-w-pack/addon/templates/components/w-pagination.hbs
+++ b/lib/ember-w-pack/addon/templates/components/w-pagination.hbs
@@ -1,4 +1,4 @@
-{{#if disableComponent}} 
+{{#if showComponent}} 
 <div class="t-align-c mt-3 bold">
   <button disabled="{{if disabledPrevious 'disabled'}}" {{action 'previousPage'}}>
     &lt; Prev
