quiz view designs updated

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -184,3 +184,13 @@ $cb-red: #ff6666;
     }
   }
 }
+
+.c-qna {
+  .green {
+    color: #6ECF4A !important;
+  }
+
+  .red {
+    color: #FF6666 !important;
+  }
+}
