quiz flox redesign

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -166,6 +166,10 @@ $cb-red: #ff6666;
     padding-bottom: 2rem;
   }
 
+  .tab {
+    color: #fff;
+  }
+
   tr {
     border-bottom: solid 1px #23252c;
   }
