--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -198,3 +198,10 @@ $cb-red: #ff6666;
     color: #FF6666 !important;
   }
 }
+
+.pop-up {
+  position: absolute;
+}
+.dropdown-ul {
+  width: 375px;
+}
