--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,10 @@ $cb-red: #ff6666;
 @import "./components/index.scss";
 @import "lists.scss";
 
+body {
+  padding-top: 70px;
+}
+
 .notes-list-container {
   height: calc(100% - 75px);
   overflow: auto;
@@ -87,11 +91,6 @@ $cb-red: #ff6666;
   .content-container {
     padding: 0 2%;
   }
-}
-.c-topnav {
-  width: 88vw;
-  max-width: unset;
-  z-index: 5;
 }
 
 .max-width-unset {
