--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,6 +8,7 @@ $cb-red: #ff6666;
 
 @import "./components/index.scss";
 @import "./components/course-card.scss";
+@import "./components/nagarro-banner.scss";
 @import "lists.scss";
 
 body {
