--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@ $cb-red: #ff6666;
 @import "./components/index.scss";
 @import "./components/course-card.scss";
 @import "./components/nagarro-banner.scss";
+@import "./components/textarea.scss";
 @import "lists.scss";
 
 body {
